--- a/Pagina Principal.html
+++ b/Pagina Principal.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lan="es">
 <head>
-    <title>Sahumerios</title>
+    <title>Lolamora</title>
    <meta charset="utf-8">
    <nav>
     <a href="Productos.html"> Productos </a>
