--- a/Pagina Principal.html
+++ b/Pagina Principal.html
@@ -1,26 +1,49 @@
 <!DOCTYPE html>
-<html lan="es">
+<html lang="es">
 <head>
-    <title>Lolamora</title>
+
+   <h1><text align: center>Lolaroma </h1>
    <meta charset="utf-8">
+   <link rel="stylesheet" href="misestilos.css">
+   <link rel="stylesheet"href="http://fonts.googleapis.com/css2?family=Open+Arial:wght@300;400&display=swap">
+   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+   <!--Get your own codeat fontawesome.com-->
    <nav>
     <a href="Productos.html"> Productos </a>
     <a href="Contáctenos.html">Contáctenos </a>
     <a href="Ventas">Ventas</a>
+    <a href="Suscribiteanuestraspromociones">Suscribite a nuestras promociones </a>
+    <a href="Sobrenosotros" >Sobre nosotros </a>
    </nav>
 </head>
 <body>
-<section id="cajapadre">
+    <br>
+    <p>Aquí encontrará los mejores sahumerios importados al mejor precio</p>
+<br>
+    <section id="cajapadre">
     <div id="caja-1">Envío</div>
     <div id="caja-2">Promociones</div>
     <div id="caja-3">Atención personalizada</div>
     <div id="caja-4">Precios mayoristas</div>
 </section>
+<br>
+<h1>Nuevos Ingresos</h1>
+<img src="  ">
+<br>
+<h2>Productos destacados</h2>
+<img src="">
 </body>
 
 <footer>
     <address>
     <small>&copy;Derechos Reservados 2022/</small>
     </address>
+    <br>
+    <script>
+        <form method="get"action="procesar.php">
+            <p><input type="text" name="Email"></p>
+            <p><input type="submit"></p>
+                </form>
+                </script>
 </footer>
 </html>
